--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,25 +19,29 @@
         app:layout_constraintTop_toBottomOf="@+id/toolBar"
         app:navGraph="@navigation/nav_fragments" />
 
-    <androidx.appcompat.widget.Toolbar
+    <include
         android:id="@+id/toolBar"
+        layout="@layout/custom_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/yellow">
+        app:menu="@menu/toolbar_menu">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Notes"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            >
-        </TextView>
+    </include>
 
-    </androidx.appcompat.widget.Toolbar>
+<!--    <androidx.appcompat.widget.Toolbar-->
+<!--        android:id="@+id/toolBar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@color/yellow"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:menu="@menu/toolbar_menu">-->
+
+<!--    </androidx.appcompat.widget.Toolbar>-->
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
